Update favicon to TrueVoice logo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!doctype html>
 <html lang="en">
-  <head>
+   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Basic page setup -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TrueVoice Digital</title>
+    <title>TrueVoice Digital — 24/7 Christian Music • Faith • Hope</title>
+
+    <!-- Primary SEO Meta Tags -->
+    <meta
+      name="title"
+      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+    />
+    <meta
+      name="description"
+      content="TrueVoice Digital streams uplifting Christian music, daily encouragement, and powerful biblical truth — all day, every day. Listen live and stay encouraged."
+    />
+    <meta
+      name="keywords"
+      content="Christian music, worship music, Christian radio, faith streaming, TrueVoice Digital, Bible encouragement, worship live, Christian streaming app"
+    />
+    <meta name="author" content="TrueVoice Digital" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://truevoice.digital/" />
+    <meta
+      property="og:title"
+      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+    />
+    <meta
+      property="og:description"
+      content="Streaming hope, worship, and encouragement 24/7. Listen live on TrueVoice Digital."
+    />
+    <meta property="og:image" content="https://truevoice.digital/og-truevoice.jpg" />
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://truevoice.digital/" />
+    <meta
+      name="twitter:title"
+      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+    />
+    <meta
+      name="twitter:description"
+      content="Streaming hope, worship, and encouragement 24/7. Listen live on TrueVoice Digital."
+    />
+    <meta
+      name="twitter:image"
+      content="https://truevoice.digital/og-truevoice.jpg"
+    />
+
+    <!-- Favicon (you can swap this later) -->
+    <link rel="icon" type="image/png" href="/truevoice-favicon.png" />
+
+    <!-- Theme color for mobile browser chrome -->
+    <meta name="theme-color" content="#275FDB" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://truevoice.digital/" />
   </head>
   <body>
     <div id="root"></div>
