Finalize UI layout, mobile fixes, recent tracks bar, and header give action

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
     <!-- Basic page setup -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>TrueVoice Digital — 24/7 Christian Music • Faith • Hope</title>
+    <title>TrueVoice Digital — 24/7 Music • Faith • Hope</title>
 
     <!-- Primary SEO Meta Tags -->
     <meta
       name="title"
-      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+      content="TrueVoice Digital — 24/7 Music • Faith • Hope"
     />
     <meta
       name="description"
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://truevoice.digital/" />
     <meta
       property="og:title"
-      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+      content="TrueVoice Digital — 24/7 Music • Faith • Hope"
     />
     <meta
       property="og:description"
@@ -41,7 +41,7 @@
     <meta name="twitter:url" content="https://truevoice.digital/" />
     <meta
       name="twitter:title"
-      content="TrueVoice Digital — 24/7 Christian Music • Faith • Hope"
+      content="TrueVoice Digital — 24/7 Music • Faith • Hope"
     />
     <meta
       name="twitter:description"
